# BUNK3R-IA

./: .env.example  .gitignore  BUNK3R_START_LOCAL_IA.bat  Dockerfile  GRAVITY-CONNECT.md  Procfile  ai_toolkit.py  antigravity_bridge.py  entrypoint.sh  estructura.txt  logs  nginx.conf.template  ollama_persistent_setup.md  project_audit.csv  pyproject.toml  reg_brain.ps1  render.yaml  replit.md  requirements.txt  temp_scan.csv  test_workers.py  tunnel_log.txt  verify_gravity.py  verify_gravity_v2.py
BUNK3R_IA/: .coverage  PROMPT_PENDIENTES_IA.md  __init__.py  app_desktop.py  config.py  main.py  models.py  replit_auth.py  requirements.txt  test_ws.py
attached_assets/: Pasted-PS-C-Users-Asus-cd-C-Users-Asus-Documents-Proyectos-Ant_1766007732486.txt  Pasted-PS-C-Users-Asus-cloudflared-tunnel-url-http-localhost-8_1766006988576.txt  Pasted-PS-C-Users-Asus-cloudflared-tunnel-url-http-localhost-8_1766008516962.txt  Pasted-PS-C-Users-Asus-pip-install-flask-flask-cors-pyautogui-_1766005231627.txt  Pasted-PS-C-Users-Asus-pip-install-flask-flask-cors-pyautogui-_1766005293169.txt
backend/: README.md  __init__.py  config.py  main.py  models.py  replit_auth.py  requirements.txt  test_client.html
bunk3r_api/: automation_routes.py  extension_routes.py  github_sync.py  github_sync_routes.py  ide_routes.py  preview_routes.py  project_routes.py  repo_manager.py  routes.py  terminal_routes.py
bunk3r_backend/: __init__.py  main.py  models.py  replit_auth.py  requirements.txt
bunk3r_core/: __init__.py  ai_service.py  gravity_core.py  nervous_system.py  repo_indexer.py  singularity.py
(+166 files in other folders)
